@@ -1,6 +1,7 @@
 Release 0.3.4 (pending)
 ==========================
 
+- Conditional support for new logging API (replaces msg.hpp)
 - Tx stream activation hooks based on start and end of burst
 
 Release 0.3.3 (2017-04-29)
